css/style.css
body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 300;
}

hr {
    border-color: #ccc;
}

h1, h2, h3, h4, h5, h6 {
    margin: 10px 0;
    font-weight: 300;
}

h1 small {
    font-weight: 300;
}

body > .container > header {
    text-align: center;
    padding: 10px 0;
}

.logo {
    height: 42px;
    width: 42px;
    vertical-align: text-top;
}

body > .container > footer {
    border-top: 1px solid #ccc;
    text-align: center;
    padding: 10px 0;
    color: #aaa;
    font-size: 10pt;
    margin-top: 10px;
}

body > .container > nav {
    border-top: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
    padding: 5px 0;
}

body > .container > nav > ul {
    list-style: none;
    padding: 0 10px;
    margin: 0;
}

body > .container > nav > ul > li {
    float: left;
    margin: 0 10px;
}

body > .container > nav input[type="search"] {
    border: 0;
    border-left: 1px solid #ccc;
    padding: 0 10px;
}

.recent-news {
    list-style: none;
    padding: 0;
}

.recent-news li {
    padding: 10px 0;
    border-bottom: 1px solid #ccc;
}

article > header {
    padding-bottom: 10px;
}

time {
    color: #888;
}

.dateline {
    text-transform: uppercase;
}

.dateline:after {
    content: "—";
}

.image {
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    display: block;
}

.articles .image {
    width: 100%;
    height: 200px;
}

.articles {
    list-style: none;
    padding: 0;
}

figure.lead .image {
    width: 100%;
    height: 300px;
}

figure.lead figcaption {
    font-size: 10pt;
    color: #fff;
    background: #000;
    padding: 5px 10px;
    font-weight: 300;
}

.search-results .entries {
    list-style: none;
    padding: 0;
}

/* totally invalid html here, but lunr hardcodes this */
.search-results .entries p {
    padding: 20px 0;
}

.search-results .entries > li,
.articles > li {
    border-bottom: 1px solid #ccc;
    padding: 10px 0;
}

.search-results .entries > li:last-child,
.articles > li:last-child {
    border-bottom: none;
}

